# win32_window

./: Cargo.toml  README.md  kanpilot.toml
palm/: Cargo.toml
palm/src/: error.rs  lib.rs  renderer.rs  window.rs
palm/src/platform/win/: gl.rs  mod.rs  window.rs
palm/src/renderer/: skia.rs
palm/src/ui/: color.rs  component.rs  mod.rs  rect.rs
src/: error.rs  main.rs  window.rs
src/win/: gl.rs  window.rs
test_app/: Cargo.toml
test_app/src/: main.rs
