[package]
name = "palm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
skia-safe = { version = "0.75.0", features = ["gl"] }
thiserror = "1.0.64"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_OpenGL",
]
